@@ -45,6 +45,7 @@ REDHAT_BUGZILLA=1002279,1093336
     - PRJ_RPM_SPEC_FILE
 
 - Changed:
+  + DateTimeFormat: Macro to function: TODAY
   + ManageString: Macro to function: STRING_ESCAPE_SEMICOLON
   + ManageDependency: Macro to function: MANAGE_DEPENDENCY
   + PRJ_DOC_DIR: Changed from docdir/<PRJ_NAME>-<PRJ_VER> 
